# uhmi-ivi-wm

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
app/: CMakeLists.txt  comm_parser.c  comm_parser.h  comm_receiver.c  comm_receiver.h  ilm_control_wrapper.c  ilm_control_wrapper.h  main.c
example/: CMakeLists.txt  wmsendcmd.c
example/command/: init-config.json  initial-screen-command.json
